# unicode-id

./: .gitignore  CHANGELOG.md  Cargo.toml  MAINTENANCE.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: id.rs
scripts/: unicode.py
src/: lib.rs  tables.rs  tests.rs
tests/: exhaustive_tests.rs
