[package]
name = "unicode-id"
version = "0.2.2"
authors = ["erick.tryzelaar <erick.tryzelaar@gmail.com>",
           "kwantam <kwantam@gmail.com>",
           "Manish Goregaokar <manishsmail@gmail.com>"
           ]

homepage = "https://github.com/Boshen/unicode-id"
repository = "https://github.com/Boshen/unicode-id"
# FIXME
# documentation = "https://unicode-rs.github.io/unicode-xid"
license = "MIT OR Apache-2.0"
keywords = ["text", "unicode", "unicode-id"]
readme = "README.md"
description = """
Determine whether characters have the ID_Start
or ID_Continue properties according to
Unicode Standard Annex #31.
"""
exclude = ["/.github/**", "/scripts/*"]
rust-version = "1.17"

[features]
default = []
no_std = []
bench = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "id"
harness = false
